--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,6 +3,13 @@
     "configurations": [
         {
             "type": "java",
+            "name": "Kafe20",
+            "request": "launch",
+            "mainClass": "jobsheet12.Kafe20",
+            "projectName": "PraktikumDaspro_6a2420e6"
+        },
+        {
+            "type": "java",
             "name": "tugasD",
             "request": "launch",
             "mainClass": "pertemuan12Arry2.tugasD",
